Bug 1567319 - Discard payloads for no-op composites. r=bas

Differential Revision: https://phabricator.services.mozilla.com/D40569